[package]
authors = ["Daniel <codinaut@gmail.com>"]
description = "Initialize variables lazily, futuristically"
edition = "2018"
homepage = "https://github.com/codinaut/lazy-futuristic"
license = "MIT"
name = "lazy_futuristic"
readme = "README.md"
version = "1.0.2"

[dependencies]
futures = "0.3.5"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["full"] }
